--- a/opdracht-1/selectors.css
+++ b/opdracht-1/selectors.css
@@ -3,33 +3,69 @@
 ========================================================= */
 
 /* 1.1 Geef de 'img' tag in the header een ID en zet zijn breedte op 100% */
-
-
+#header-image {
+    width: 100%;
+}
 
 /* 1.2 Verander de kleur van alle list items in de unordered list naar hsl(110, 29%, 52%) */
+ul {
+    list-style: none;
+}
 
-
+ul li::before {
+    content: "\2022";
+    color: hsl(110, 29%, 52%);
+    font-weight: bold;
+    display: inline-block;
+    width: 1em;
+    margin-left: -1em;
+}
 
 /* 1.3 Geef de 'span' tag in de footer een beschrijvende class name en maak de lettergrootte kleiner  */
-
-
+.footer-tutti {
+    font-size: smaller;
+}
 
 /* 1.4 Haal de text-decoration van navigatie-links weg, geef onbezochte links de kleur hsl(359, 79%, 56%) en verander de kleur wanneer de gebruiker er overheen hovert. */
+/*!* onbezochte link *!*/
+nav ul li a:visited{
+    color: hsl(359, 79%, 56%);
+    text-decoration: none;
+}
 
-
+nav ul li a:hover{
+    color: hsl(89, 79%, 56%);
+}
 
 /* 1.5 Maak een hover- en visited stijl voor alle links in 'main'. */
+main a:visited{
+    color: hsl(220, 79%, 56%);
+}
 
+main a:hover{
+    color:hsl(299, 79%, 56%);
 
+}
 
 /* Verander de achtergrond van de SignUp button. Tip: https://developer.mozilla.org/en-US/docs/Web/CSS/Attribute_selectors  */
+.button {
+    background-color: hsl(110, 29%, 52%);
+    transition-duration: 0.4s;
+}
 
-
+.button:hover {
+    background-color: hsl(359, 79%, 56%);
+    color: white;
+}
 
 /* Geef het tekst-veld een blauwe rand wanneer hij in focus is */
-
-
+input:focus {
+    outline: none;
+    border: 2px solid hsl(220, 79%, 56%);
+}
 
 /* Target alle heading tags op de pagina en zet hun font-family op 'Bree Serif', serif */
-
+h1, h2, h3 {
+    font-family: 'Bree Serif', serif;
+}
 
