--- a/opdracht-2/flexbox.css
+++ b/opdracht-2/flexbox.css
@@ -1,3 +1,75 @@
 /* ======================================================
    OEFENEN MET FLEXBOX
 ========================================================= */
+
+/*Opdracht 2.1*/
+.one {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+/*Opdracht2.2*/
+.two {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.two div{
+    display: flex;
+    flex-grow: 0;
+}
+
+/*Opdracht 2.3*/
+.three, div.three ul{
+    display: flex;
+    justify-content: space-between;
+}
+
+div.three ul{
+    flex-basis: 300px;
+    flex-wrap: wrap;
+}
+div.three ul li{
+    display: flex;
+    list-style-type: none;
+}
+
+div.three div{
+    align-items: center;
+    display: flex;
+    flex-grow: 0;
+}
+
+/*Opdracht 2.4*/
+body > div:nth-child(7n),
+div form{
+    display:flex;
+    justify-content: center;
+}
+
+div form{
+    align-items: center;
+}
+
+div form, div form label{
+    flex-direction: column;
+}
+
+div form label{
+    display: flex;
+}
+
+/*Opdracht 2.5*/
+.five {
+    display: flex;
+    flex-flow: wrap;
+    align-content: space-between;
+}
+
+.five article{
+    width:300px;
+    flex-grow: 1;
+    align-self: stretch;
+}
