--- a/opdracht-1/selectors.css
+++ b/opdracht-1/selectors.css
@@ -4,17 +4,8 @@
 }
 
 /* 1.2 Verander de kleur van alle list items in de unordered list naar hsl(110, 29%, 52%) */
-ul {
-    list-style: none;
-}
-
-ul li::before {
-    content: "\2022";
+ul li {
     color: hsl(110, 29%, 52%);
-    font-weight: bold;
-    display: inline-block;
-    width: 1em;
-    margin-left: -1em;
 }
 
 /* 1.3 Geef de 'span' tag in de footer een beschrijvende class name en maak de lettergrootte kleiner  */
@@ -23,22 +14,25 @@ ul li::before {
 }
 
 /* 1.4 Haal de text-decoration van navigatie-links weg, geef onbezochte links de kleur hsl(359, 79%, 56%) en verander de kleur wanneer de gebruiker er overheen hovert. */
-nav ul li a:visited{
-    color: hsl(359, 79%, 56%);
+nav a {
     text-decoration: none;
 }
 
-nav ul li a:hover{
+nav a:link {
+    color: hsl(359, 79%, 56%);
+}
+
+nav a:hover {
     color: hsl(89, 79%, 56%);
 }
 
 /* 1.5 Maak een hover- en visited stijl voor alle links in 'main'. */
-main a:visited{
-    color: hsl(220, 79%, 56%);
+main a:hover {
+    color: hsl(299, 79%, 56%);
 }
 
-main a:hover{
-    color:hsl(299, 79%, 56%);
+main a:visited {
+    color: hsl(220, 79%, 56%);
 }
 
 /* Verander de achtergrond van de SignUp button. Tip: https://developer.mozilla.org/en-US/docs/Web/CSS/Attribute_selectors  */
@@ -53,8 +47,7 @@ main a:hover{
 }
 
 /* Geef het tekst-veld een blauwe rand wanneer hij in focus is */
-input:focus {
-    outline: none;
+input[type="text"]:focus {
     border: 2px solid hsl(220, 79%, 56%);
 }
 
